Change fix swagger docs
